update editor questoes

--- a/public/css/perfil_usuario.css
+++ b/public/css/perfil_usuario.css
@@ -45,3 +45,18 @@
         flex-basis: 100%;
     }
 }
+.editar-perfil {
+    color: #FF4500;
+    /* Cor do link */
+    text-decoration: underline;
+    /* Sublinha o link */
+    cursor: pointer;
+    /* Muda o cursor para indicar que é um link */
+  }
+
+  .editar-perfil:hover {
+    color: #FF6347;
+    /* Cor do link ao passar o mouse */
+    text-decoration: none;
+    /* Remove a sublinhação ao passar o mouse */
+  }
