--- a/views/professor/criar-topicos.ejs
+++ b/views/professor/criar-topicos.ejs
@@ -79,11 +79,13 @@
 
     .remove-button { /* Remove topic button */
       margin-left: 8px;
-      padding: 8px 16px;
-      color: #fff;
-      background-color: #28a745; /* Green color */
-      border: none;
-      border-radius: 4px;
+      gap: 5px;
+        padding: 8px 12px;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: black;
+        cursor: pointer;
+
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
     }
@@ -95,11 +97,13 @@
     .add-topic-button { /* Add new topic button */
       display: block;
       margin-top: 16px;
-      padding: 8px 16px;
-      color: #fff;
-      background-color: #198754; /* Blue color */
-      border: none;
-      border-radius: 4px;
+      gap: 5px;
+        padding: 8px 12px;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: black;
+        cursor: pointer;
+
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
     }
@@ -112,10 +116,13 @@
       display: block;
       margin-top: 16px;
       padding: 8px 16px;
-      color: #fff;
-      background-color: #dc3545; /* Red color */
-      border: none;
-      border-radius: 4px;
+      gap: 5px;
+        padding: 8px 12px;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: black;
+        cursor: pointer;
+ 
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
     }
