--- a/views/usuario/perfil_usuario.ejs
+++ b/views/usuario/perfil_usuario.ejs
@@ -11,24 +11,10 @@
 
   <!--========== CSS ==========-->
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/perfilFinal.css">
+  <link rel="stylesheet" href="/css/perfil_usuario.css">
 
   <style>
-    .editar-perfil {
-      color: #FF4500;
-      /* Cor do link */
-      text-decoration: underline;
-      /* Sublinha o link */
-      cursor: pointer;
-      /* Muda o cursor para indicar que é um link */
-    }
 
-    .editar-perfil:hover {
-      color: #FF6347;
-      /* Cor do link ao passar o mouse */
-      text-decoration: none;
-      /* Remove a sublinhação ao passar o mouse */
-    }
   </style>
 
   <title>Responsive sidebar submenus</title>
