--- a/views/usuario/editar-usuario.ejs
+++ b/views/usuario/editar-usuario.ejs
@@ -5,19 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de editar usuario</title>
-    <link rel="stylesheet" href="/css/perfilUsuario.css">
+    <link rel="stylesheet" href="/css/editar_usuario.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .btn-danger {
-            background-color: #dc3545;
-            border-color: #dc3545;
-            color: #fff;
-        }
 
-        .btn-danger:hover {
-            background-color: #c82333;
-            border-color: #bd2130;
-        }
     </style>
 </head>
 
@@ -135,7 +126,7 @@
                                 </div>
                             </form>
                         </div>
-                        <a href="/usuario/perfil">Voltar </a>
+                       
 
                     </div>
 
