add question preview and modal for create topic

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -139,7 +139,7 @@
                             <div class="nav__dropdown-collapse">
                                 <div class="nav__dropdown-content">
 
-                                    <a href="/professor/criar-topicos" class="nav__dropdown-item">Criar Topicos</a>
+                       
                                     <a href="/professor/topicos" class="nav__dropdown-item">Meus Topicos</a>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                                     <div class="nav__dropdown-content">
 
                                         <a href="/usuario/criar-simulado" class="nav__dropdown-item">Criar Simulado</a>
-                                        <a href="/usuario/Simulados" class="nav__dropdown-item">Meus Simulados</a>
+                                        <a href="/usuario/Simulados/meus-simulados" class="nav__dropdown-item">Meus Simulados</a>
                                         <!-- <a href="/usuario/seleciona-simulado" class="nav__dropdown-item">Consultar simulados</a> -->
 
 
