--- a/views/professor/minhas-questoes.ejs
+++ b/views/professor/minhas-questoes.ejs
@@ -10,7 +10,8 @@
 
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="/css/styles.css">
-
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <title>Responsive sidebar submenus</title>
     <style>
         * {
@@ -357,7 +358,7 @@
                         <th>Título</th>
 
                         <th>Tipo</th>
-
+                        <th>Questão </th>
                         <th>Tópicos</th>
                         <th>Ação</th>
                     </tr>
@@ -373,6 +374,12 @@
 
                                 <td>
                                     <%= questao.tipo %>
+                                </td>
+                                <td>
+                                    <div class="name" data-delta='<%= questao.pergunta %>'>
+                                        <!-- O conteúdo será inserido via JavaScript -->
+                                        <span class="required">*</span>
+                                    </div>
                                 </td>
 
                                 <td>
@@ -434,6 +441,7 @@
 
         <!--========== MAIN JS ==========-->
         <script src="/js/main.js"></script>
+        <script src="/js/quillContentHtmlTable.js"></script>
         
 <script>
 function confirmDelete(questaoId) {
