--- a/views/simulado/remover-questoes.ejs
+++ b/views/simulado/remover-questoes.ejs
@@ -6,7 +6,8 @@
 
         <!--========== BOX ICONS ==========-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="/css/styles.css">
     
@@ -243,7 +244,7 @@
                             <th></th>
                             <th>Título</th>
                             <th>Tipo</th>
-                            
+                            <th>Questão</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -256,7 +257,12 @@
                                 <td>
                                     <%= questao.tipo %>
                                 </td>
-                               
+                                <td>
+                                    <div class="name" data-delta='<%= questao.pergunta %>'>
+                                        <!-- O conteúdo será inserido via JavaScript -->
+                                        <span class="required">*</span>
+                                    </div>
+                                </td>
                             </tr>
                         <% }); %>
                     </tbody>
@@ -277,7 +283,7 @@
                 <button type="submit">Remover Questões</button>
             </form>
             
-                <a href="/usuario/Simulados/">Voltar para a simulado</a>
+    
     <link rel="stylesheet" href="/css/styles.css">
         </main>
 
@@ -287,5 +293,6 @@
 </script>
         <script src="/js/main.js"></script>
         <script src="/js/editarsimulado.js"></script>
+        <script src="/js/quillContentHtmlTable.js"></script>
     </body>
 </html>
