--- a/views/partials/modalTopicos.ejs
+++ b/views/partials/modalTopicos.ejs
@@ -102,7 +102,7 @@ background-color: #007bff; /* Bootstrap primary color */
 color: white;
 }
 
-.submit-button {
+.topic-button {
 background-color: #28a745; /* Bootstrap success color */
 color: white;
 }
