--- a/views/usuario/login.ejs
+++ b/views/usuario/login.ejs
@@ -40,17 +40,7 @@
             </div>
         </form>
     </div>
-        <footer>
-        <div class="rodape" style="text-align:center; display: flex; justify-content: center; align-items: center;">
-            <div class="oferecimento-container">
-          
-                <a style="color: white; margin-left: 5px;"> <!-- Margem esquerda para separar o texto da imagem -->
-                    <img src="/img/infinite_logo.png" alt="Infinite Logo" style="width: 250px; height: 
-                    250px;" />
-                </a>
-            </div>
-        </div>
-    </footer>
+    <div class="infiniteLogo"><img src="/img/infinite_logo.png" alt="Infinite Logo" style="width: 250px; height: 250px;" /></div>
 </body>
 
 </html>
